# SingleInstance

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  SingleGuiApplication.cpp  SingleGuiApplication.h  SingleInstance  SingleInstance.cpp  SingleInstance.h  SingleInstance.pri  SingleInstance_p.cpp  SingleInstance_p.h  Windows.md  build.sh
cmake/: qt-location.cmake
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp
examples/calculator/: CMakeLists.txt  calculator.cpp  calculator.pro  main.cpp
examples/sending_arguments/: CMakeLists.txt  main.cpp
